--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato - Loja dos Tratores</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Style5.css">
+    <link rel="stylesheet" href="../Assets/Css/Styles Contact.css">
 </head>
 <!-- Linha amarela superior -->
 <div class="informacao-topo">
