Adicionando novas imagens da loja e tratores

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -6,7 +6,7 @@
     <title>Sobre - Engremaq</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../Assets/Css/Global.css">
-    <link rel="stylesheet" href="../Assets/Css/Styles About.css">
+    <link rel="stylesheet" href="../Assets/Css/Style About.css">
 </head>
 <body>
     <div class="informacao-topo">
@@ -37,7 +37,7 @@
         <div class="right-section">
             <nav class="main-nav">
                 <ul>
-                    <li><a href="../Index.html">Home</a></li>
+                    <li><a href="Index.html">Home</a></li>
                     <li><a href="About.html" class="active">Sobre</a></li>
                     <li><a href="Products.html">Produtos</a></li>
                     <li><a href="Contact.html">Contato</a></li>
