Adicionando novas imagens de tratores

--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-  <!-- TOPO (Global.css) -->
   <div class="informacao-topo">
     <span class="mensagem">Aqui você encontra tudo para o seu trator!</span>
 
@@ -35,7 +34,6 @@
     </div>
   </div>
 
-  <!-- HEADER (Global.css) -->
   <header>
     <img src="https://raw.githubusercontent.com/NicolasHarnisch/Engremaq-web-project/main/Assets/Images/image-removebg-preview.png"
          alt="Engremaq Logo" class="logo">
@@ -51,19 +49,19 @@
       <nav class="main-nav">
         <ul>
           <li><a href="Index.html" class="active">Home</a></li>
-          <li><a href="About.html">Sobre</a></li>
-          <li><a href="Products.html">Produtos</a></li>
-          <li><a href="Contact.html">Contato</a></li>
+          <li><a href="Pages/About.html">Sobre</a></li>
+          <li><a href="Pages/Products.html">Produtos</a></li>
+          <li><a href="Pages/Contact.html">Contato</a></li>
         </ul>
       </nav>
 
       <div class="user-actions">
-        <a href="Login.html" class="action-link">
+        <a href="Pages/Login.html" class="action-link">
           <img src="https://img.icons8.com/ios-filled/50/111111/user.png" alt="Conta">
           <span>Entrar</span>
         </a>
 
-        <a href="Carrinho.html" class="action-link">
+        <a href="Pages/Carrinho.html" class="action-link">
           <span class="cart-price">R$ 0,00</span>
           <div class="cart-icon-wrapper">
             <img src="https://img.icons8.com/ios-filled/50/111111/shopping-cart.png" alt="Carrinho">
@@ -74,13 +72,11 @@
     </div>
   </header>
 
-  <!-- HERO (banner estilo antigo) -->
   <section class="hero-old" aria-label="Banner principal">
     <div class="hero-slides" id="heroSlides" aria-hidden="true">
-      <!-- Imagens da web (teste) -->
-      <img class="hero-slide is-active" src="https://source.unsplash.com/2400x900/?engine,industrial,technology" alt="">
-      <img class="hero-slide" src="https://source.unsplash.com/2400x900/?tractor,farm,machine" alt="">
-      <img class="hero-slide" src="https://source.unsplash.com/2400x900/?mechanic,workshop,engine" alt="">
+      <img class="hero-slide is-active" src="https://raw.githubusercontent.com/NicolasHarnisch/Engremaq-web-project/main/Assets/Images/izzuddin-azzam-HKBtu2w52DA-unsplash.jpg" alt="Trator amarelo">
+      <img class="hero-slide" src="https://raw.githubusercontent.com/NicolasHarnisch/Engremaq-web-project/main/Assets/Images/fornecedor-de-peca-para-motor-shibaura.jpg" alt="Motor trator">
+      <img class="hero-slide" src="https://raw.githubusercontent.com/NicolasHarnisch/Engremaq-web-project/main/Assets/Images/Captura%20de%20tela%202024-11-17%20161111.png" alt="Peças">
     </div>
 
     <div class="hero-overlay"></div>
@@ -91,12 +87,10 @@
       <a class="hero-btn" href="#promocao">CLIQUE AQUI</a>
     </div>
 
-    <!-- setas -->
     <button class="hero-arrow hero-prev" type="button" aria-label="Slide anterior" id="heroPrev">‹</button>
     <button class="hero-arrow hero-next" type="button" aria-label="Próximo slide" id="heroNext">›</button>
   </section>
 
-  <!-- PROMOÇÃO SEMANAL -->
   <section class="sec-yellow" id="promocao" aria-label="Promoção semanal">
     <div class="container">
       <div class="sec-head">
@@ -107,10 +101,10 @@
       <div class="cards-grid">
         <article class="product-card">
           <div class="product-img">
-            <img src="https://source.unsplash.com/900x700/?belt,industrial" alt="Correia">
+            <img src="https://raw.githubusercontent.com/NicolasHarnisch/Engremaq-web-project/main/Assets/Images/8PK1930GOOD_02.webp" alt="Correia">
           </div>
           <div class="product-body">
-            <h3>Correia (exemplo) — reposição rápida</h3>
+            <h3>Correia — reposição rápida</h3>
             <span class="product-code">COD: 000001</span>
             <a class="btn btn-whats" href="https://wa.me/5585996883588" target="_blank" rel="noopener">Comprar pelo WhatsApp</a>
           </div>
@@ -118,10 +112,10 @@
 
         <article class="product-card">
           <div class="product-img">
-            <img src="https://source.unsplash.com/900x700/?metal,mechanical,parts" alt="Peça metálica">
+            <img src="https://raw.githubusercontent.com/NicolasHarnisch/Engremaq-web-project/main/Assets/Images/images.jpeg" alt="Peça metálica">
           </div>
           <div class="product-body">
-            <h3>Peça metálica (exemplo) — linha pesada</h3>
+            <h3>Peça metálica — linha pesada</h3>
             <span class="product-code">COD: 000002</span>
             <a class="btn btn-whats" href="https://wa.me/5585996883588" target="_blank" rel="noopener">Comprar pelo WhatsApp</a>
           </div>
@@ -129,10 +123,10 @@
 
         <article class="product-card">
           <div class="product-img">
-            <img src="https://source.unsplash.com/900x700/?filter,engine" alt="Filtro">
+            <img src="https://raw.githubusercontent.com/NicolasHarnisch/Engremaq-web-project/main/Assets/Images/filtro_ar_trator_massey_ant_292_295_296_610_620_640_jogo_1081_1_00686a861dfc45d1cf5521491040ea81_20240528141146.webp" alt="Filtro de Ar">
           </div>
           <div class="product-body">
-            <h3>Filtro (exemplo) — alta eficiência</h3>
+            <h3>Filtro de ar Massey — alta eficiência</h3>
             <span class="product-code">COD: 000003</span>
             <a class="btn btn-whats" href="https://wa.me/5585996883588" target="_blank" rel="noopener">Comprar pelo WhatsApp</a>
           </div>
@@ -141,7 +135,6 @@
     </div>
   </section>
 
-  <!-- MAIS VENDIDOS -->
   <section class="sec" aria-label="Mais vendidos">
     <div class="container">
       <div class="sec-head">
@@ -152,10 +145,10 @@
       <div class="cards-grid cards-grid-4">
         <article class="product-card">
           <div class="product-img">
-            <img src="https://source.unsplash.com/900x700/?oil,filter" alt="Filtro de óleo">
+            <img src="https://raw.githubusercontent.com/NicolasHarnisch/Engremaq-web-project/main/Assets/Images/download.jpeg" alt="Filtro de óleo">
           </div>
           <div class="product-body">
-            <h3>Filtro de óleo (exemplo)</h3>
+            <h3>Filtro de óleo</h3>
             <span class="product-code">COD: 100001</span>
             <a class="btn btn-whats" href="https://wa.me/5585996883588" target="_blank" rel="noopener">Comprar pelo WhatsApp</a>
           </div>
@@ -163,10 +156,10 @@
 
         <article class="product-card">
           <div class="product-img">
-            <img src="https://source.unsplash.com/900x700/?tools,mechanic" alt="Kit manutenção">
+            <img src="https://raw.githubusercontent.com/NicolasHarnisch/Engremaq-web-project/main/Assets/Images/pecas-para-tratores-kit-manutencao-motor-229-4-cilindros-aspirado-p-1739990766956.png" alt="Kit manutenção">
           </div>
           <div class="product-body">
-            <h3>Kit manutenção (exemplo)</h3>
+            <h3>Kit manutenção de motor 229</h3>
             <span class="product-code">COD: 100002</span>
             <a class="btn btn-whats" href="https://wa.me/5585996883588" target="_blank" rel="noopener">Comprar pelo WhatsApp</a>
           </div>
@@ -174,10 +167,10 @@
 
         <article class="product-card">
           <div class="product-img">
-            <img src="https://source.unsplash.com/900x700/?engine,parts" alt="Peça de motor">
+            <img src="https://raw.githubusercontent.com/NicolasHarnisch/Engremaq-web-project/main/Assets/Images/engrenagem_satelite_27_d_tracao_trator_mf_660_680_036420r1_1881_1_27082a9123eabe425be96e622170ffd7.webp" alt="Engrenagem de Tração">
           </div>
           <div class="product-body">
-            <h3>Peça de motor (exemplo)</h3>
+            <h3>Engrenagem de Tração</h3>
             <span class="product-code">COD: 100003</span>
             <a class="btn btn-whats" href="https://wa.me/5585996883588" target="_blank" rel="noopener">Comprar pelo WhatsApp</a>
           </div>
@@ -185,10 +178,10 @@
 
         <article class="product-card">
           <div class="product-img">
-            <img src="https://source.unsplash.com/900x700/?diesel,injector" alt="Injeção diesel">
+            <img src="https://raw.githubusercontent.com/NicolasHarnisch/Engremaq-web-project/main/Assets/Images/bomba-injetora-trator-new-holland-7610-dps-ano-inicial-1992-ano-final-motor-fnh-268-cu-in-codigo-montadora-esnn9a543va-0d8e4a0a.webp" alt="Injeção diesel">
           </div>
           <div class="product-body">
-            <h3>Injeção / bico (exemplo)</h3>
+            <h3>Bomba Injetora New Holland</h3>
             <span class="product-code">COD: 100004</span>
             <a class="btn btn-whats" href="https://wa.me/5585996883588" target="_blank" rel="noopener">Comprar pelo WhatsApp</a>
           </div>
@@ -197,7 +190,6 @@
     </div>
   </section>
 
-  <!-- SEÇÃO GRANDE: “As melhores peças...” -->
   <section class="sec sec-feature" aria-label="As melhores peças para o seu trator">
     <div class="container feature-container">
       <div class="feature-text">
@@ -215,8 +207,8 @@
         </p>
 
         <div class="feature-actions">
-          <a class="btn btn-primary" href="Products.html">Ver produtos</a>
-          <a class="btn btn-outline" href="Contact.html">Falar com a loja</a>
+          <a class="btn btn-primary" href="Pages/Products.html">Ver produtos</a>
+          <a class="btn btn-outline" href="Pages/Contact.html">Falar com a loja</a>
         </div>
       </div>
 
@@ -237,7 +229,6 @@
     </div>
   </section>
 
-  <!-- ENTREGA -->
   <section class="sec-dark" aria-label="Entrega para todo o Brasil">
     <div class="container delivery-container">
       <div class="delivery-left">
@@ -273,7 +264,6 @@
 
   <div class="page-spacer" aria-hidden="true"></div>
 
-  <!-- FOOTER (Global.css) -->
   <footer class="footer">
     <div class="footer-overlay"></div>
 
@@ -315,9 +305,9 @@
         <h3>Menu</h3>
         <ul>
           <li><a href="Index.html">Home</a></li>
-          <li><a href="About.html">Sobre</a></li>
-          <li><a href="Products.html">Produtos</a></li>
-          <li><a href="Contact.html">Contato</a></li>
+          <li><a href="Pages/About.html">Sobre</a></li>
+          <li><a href="Pages/Products.html">Produtos</a></li>
+          <li><a href="Pages/Contact.html">Contato</a></li>
         </ul>
       </div>
 
@@ -342,7 +332,6 @@
     </div>
   </footer>
 
-  <!-- JS carrossel (sem contador) -->
   <script>
     (function () {
       const slides = Array.from(document.querySelectorAll(".hero-slide"));
